force-app/main/default/objects/SVMXC__SM_IB_Attributes_Template_Instance__c/SVMXC__SM_IB_Attributes_Template_Instance__c.object-meta.xml
<CustomObject>
    <description>Object to manage templates and installed product reference</description>
    <label>IB Attributes Template Instance</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>IB Attributes Template Instance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IB Attributes Template Instances</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>