force-app/main/default/objects/SVMXC__SM_IB_Attributes_Template_Instance__c/fields/Proactive_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Attributes__c</fullName>
    <label>Proactive Attributes</label>
	<description>Used in the proactive JSON automation. Filled by automation.</description>
	<length>131072</length>
    <type>LongTextArea</type>
</CustomField>