force-app/main/default/objects/SVMXC__SM_IB_Attributes_Template_Instance__c/fields/Serial_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Lot_Number__c</fullName>
    <externalId>true</externalId>
	<description>Used for the integration to match with a SFDC record in the proactive JSON automation. Filled by automation.</description>
    <label>Serial Lot Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>