force-app/main/default/objects/SVMXC__SM_IB_Attributes_Template_Instance__c/fields/SVMXC__SM_Captured_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Captured_On__c</fullName>
    <label>Captured On</label>
    <type>DateTime</type>
</CustomField>