force-app/main/default/objects/SVMXC__SM_IB_Attributes_Template_Instance__c/fields/SVMXC__SM_Installed_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Installed_Product_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to installed product id/name</description>
    <label>Installed Product Id</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>IB Attributes Template Instances</relationshipLabel>
    <relationshipName>IB_Attributes_Template_Instance</relationshipName>
    <type>Lookup</type>
</CustomField>