force-app/main/default/objects/SVMXC__SM_IB_Attributes_Template_Instance__c/fields/SVMXC__SM_Instance_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Instance_Template_Id__c</fullName>
    <description>Unique Record Id, Managed by ServiceMax App</description>
    <label>Instance Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>